--- a/frontend/src/components/checkout/CheckOut.module.css
+++ b/frontend/src/components/checkout/CheckOut.module.css
@@ -1,27 +1,26 @@
 .checkout-outer {
-    margin: 8%;
-  }
-  
-  .checkout-container {
-    display: flex;
-  }
-  
-  .checkout-container ul {
-    flex: 1;
-    list-style-type: none;
-    padding: 0;
-    width: 684.985px;
-    height: 481.161px;
-    max-height: 481.161px;;
-      overflow-y: scroll;
-  }
-  
-  .checkout-container ul::-webkit-scrollbar {
-      width: 6px;
-      background-color: #F5F5F5;
-  }
-  
-  .checkout-container ul::-webkit-scrollbar-thumb {
-      background-color: #adadad;
-  }
-  
+  margin: 8%;
+}
+
+.checkout-container {
+  display: flex;
+}
+
+.checkout-container ul {
+  flex: 1;
+  list-style-type: none;
+  padding: 0;
+  width: 684.985px;
+  height: 481.161px;
+  max-height: 481.161px;
+  overflow-y: scroll;
+}
+
+.checkout-container ul::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f5;
+}
+
+.checkout-container ul::-webkit-scrollbar-thumb {
+  background-color: #adadad;
+}
