--- a/frontend/src/components/checkout/CheckOut.module.css
+++ b/frontend/src/components/checkout/CheckOut.module.css
@@ -1,32 +1,26 @@
-.checkout-outer {
-  margin: 8%;
-}
-
 .checkout-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
 }
 
-.item-group {
-  width: 684.985px;
+.checkout-items {
+  width: 480px;
 }
 
-.checkout-container ul {
-  flex: 1;
+.checkout-items ul {
   list-style-type: none;
   padding: 0;
-  max-height: 481.161px;
+  max-height: 400px;
   overflow-y: scroll;
 }
 
-.checkout-container form {
-  flex: 1;
+.checkout-items ul::-webkit-scrollbar {
+  width: 3px;
 }
 
-.checkout-container ul::-webkit-scrollbar {
-  width: 6px;
-}
-
-.checkout-container ul::-webkit-scrollbar-thumb {
+.checkout-items ul::-webkit-scrollbar-thumb {
   background-color: #adadad;
 }
