Improved responsive CSS

--- a/frontend/src/components/UI/CounterInput.module.css
+++ b/frontend/src/components/UI/CounterInput.module.css
@@ -14,4 +14,10 @@
   .input-group input:disabled {
     background-color: #ffffff;
   }
+
+  @media only screen and (max-width: 1829px) {
+    .input-group input {
+      text-align: center;
+    }
+  }
   
