--- a/frontend/src/components/MainNavigation.module.css
+++ b/frontend/src/components/MainNavigation.module.css
@@ -6,9 +6,19 @@
   font-size: 35px;
 }
 
-.link {
+.links a {
   text-decoration: none;
   margin-right: 5px;
   margin-left: 5px;
+}
+
+@media only screen and (max-width: 768px) {
+  .brand {
+    font-size:25px;
+  }
+
+  .links a span {
+    display: none;
+  }
 }
 
