--- a/frontend/src/components/checkout/UserCheckOut.module.css
+++ b/frontend/src/components/checkout/UserCheckOut.module.css
@@ -1,9 +1,5 @@
-.address {
+.black-card {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
     border-radius: 5px;
     padding: 10px;
-}
-.address span {
-    display: block;
-    margin: 5px;
 }
