--- a/frontend/src/components/UI/Button.module.css
+++ b/frontend/src/components/UI/Button.module.css
@@ -1,4 +1,3 @@
-
 .addCartBtn {
   align-items: center;
   background-color: #fff;
@@ -8,19 +7,19 @@
   cursor: pointer;
   display: inline-flex;
   fill: #000;
-  font-family: Inter,sans-serif;
+  font-family: Inter, sans-serif;
   font-size: 16px;
   font-weight: 600;
   height: 40px;
   justify-content: center;
-  letter-spacing: -.8px;
+  letter-spacing: -0.8px;
   line-height: 24px;
   min-width: 40px;
   outline: 0;
   padding: 0 17px;
   text-align: center;
   text-decoration: none;
-  transition: all .3s;
+  transition: all 0.3s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
@@ -41,6 +40,13 @@
   border-color: #06f;
   color: #06f;
   fill: #06f;
+}
+
+.addCartBtn:disabled {
+  border-color: grey;
+  color: grey;
+  fill: grey;
+  cursor: default;
 }
 
 @media (min-width: 768px) {
